--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <a href="/">Back To Recipe List</a>
-        <h1>Fried Egg</h1>
-        <p>A classic recipe.</p>
-        <h3>Ingredients</h3>
-      
-        <ul>
-            <li>1 Egg</li>
-            <li>1/4 Tbsp Butter</li>
-            <li>Pinch of Salt</li>
-        </ul>
-
-        <h3>Instructions</h3>
-        <ol>
-            <li>Melt butter in pan over medium-low heat</li>
-            <li>Crack the egg into the buttered pan</li>
-            <li>Sprinkle the pinch of salt onto cooking egg</li>
-            <li>Flip egg after about a minute and a half</li>
-            <li>Serve egg after about a minute and a half</li>
-        </ol>
-    </body>
+  <body>
+    <h1>Cooking By Myself</h1>
+    <p>Welcome to my cookbook. These are recipes I like.</p>
+    <a href="/recipe/1">Fried Egg</a>
+  </body>
 </html>
+            
